[gd_scene load_steps=6 format=3 uid="uid://cmg5dtx3dvqo3"]

[ext_resource type="Script" uid="uid://cs5hbbeqmemhf" path="res://pause_menu.gd" id="1_hdmo1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nwcfo"]
bg_color = Color(0, 0, 0, 0.423529)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p81d2"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.737255, 0.258824, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 9
shadow_color = Color(0, 0, 0, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05uyy"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.737255, 0.258824, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 9
shadow_color = Color(0, 0, 0, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2nc7s"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 3
border_color = Color(0, 0.737255, 0.258824, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 9
shadow_color = Color(0, 0, 0, 0.8)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hdmo1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nwcfo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -38.0
offset_right = 179.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 18
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_p81d2")
theme_override_styles/hover = SubResource("StyleBoxFlat_05uyy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p81d2")
theme_override_styles/normal = SubResource("StyleBoxFlat_2nc7s")
text = "Resume
"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 18
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_p81d2")
theme_override_styles/hover = SubResource("StyleBoxFlat_05uyy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p81d2")
theme_override_styles/normal = SubResource("StyleBoxFlat_2nc7s")
text = "Restart"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 18
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_p81d2")
theme_override_styles/hover = SubResource("StyleBoxFlat_05uyy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p81d2")
theme_override_styles/normal = SubResource("StyleBoxFlat_2nc7s")
text = "Exit to main menu
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -219.0
offset_top = -248.0
offset_right = 219.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 116
text = "DEPTHS"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
